<resources>
    <string name="app_name">停电预警</string>
    <string name="map_key_company">16e1d3f3ddbd9067fd1ff8e64888f877</string>
    <string name="map_key_home">b792668a5836e28035a12cdece18fa7c</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="bmob_app_key">eb6dd8eeb3a61db8b74c269113587850</string>
    <string name="title_activity_login">Sign in</string>
    <string name="temp_time">2016&#8211;01&#8211;02</string>
    <string name="http_url">http://210.77.179.6/95598/outageNotice/queryOutageNoticeList</string>
    <string name="shared_url">http://www.95598.cn/static//piture//20160616/140101.jpg</string>
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="no_network">无网络连接,请检查网络</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="area_id">areaId</string>
    <string name="hint_system_phone">18899998888</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="user_name">AS</string>
    <string name="user_name_1">Android Studio</string>
    <string name="area_11401">城区</string>
    <string name="area_11402">朝阳</string>
    <string name="area_11403">海淀</string>
    <string name="area_11404">丰台</string>
    <string name="area_11405">石景山</string>
    <string name="area_11406">通州</string>
    <string name="area_11407">昌平</string>
    <string name="area_11408">门头沟</string>
    <string name="area_11409">房山</string>
    <string name="area_11410">大兴</string>
    <string name="area_11411">平谷</string>
    <string name="area_11412">怀柔</string>
    <string name="area_11414">顺义</string>
    <string name="area_11415">延庆</string>
    <string name="area_11416">亦庄</string>
    <string name="read_phone_state">需要获取手机状态信息,是否去设置?</string>
    <string name="submit_success">提交成功</string>
    <string name="register_name_exist">用户名已被注册</string>
    <string name="loading_login">登录中&#8230;</string>
    <string name="login_success">登录成功</string>
    <string name="back">返回</string>
    <string name="login_app">登录</string>
    <string name="hint_phone">用户名/手机号码</string>
    <string name="hint_password">密码</string>
    <string name="login_name_error">登陆用户输入有误</string>
    <string name="login_name_not_null">请输入用户名或手机号</string>
    <string name="register_name_not_null">请输入手机号码</string>
    <string name="login_password_not_null">密码不能为空</string>
    <string name="login_password_length_error">请输入6~20位的密码</string>
    <string name="register_loading">提交中&#8230;</string>
    <string name="register_app">注册账号</string>
    <string name="register_success">注册成功</string>
    <string name="error_code_100">服务器异常,请稍后再试</string>
    <string name="error_code_101">用户名或密码不正确</string>
    <string name="error_code_202">用户名已存在</string>
    <string name="error_code_205">用户名不存在</string>
    <string name="error_code_206">用户未登录</string>
    <string name="error_code_207">验证码错误</string>
    <string name="error_code_209">该手机号码 已存在</string>
    <string name="error_code_210">原密码不正确</string>
    <string name="error_code_9010">网络超时</string>
    <string name="error_code_9016">无网络连接，请检查您的网络</string>
    <string name="to_forget_password">忘记密码?</string>
    <string name="request_register_code">获取验证码</string>
    <string name="register_code_not_null">请输入验证码</string>
    <string name="send_phone_code">发送验证码</string>
    <string name="show_send_code_text">S后重发</string>
    <string name="toolbar_search_view">搜索</string>
    <string name="share">数据共享</string>
    <string name="map_location">附近信息</string>
    <string name="action_reset_password">重置</string>
    <string name="button_reset_complete">完成</string>
    <string name="button_register_submit">注册</string>
    <string name="password_reset_success">密码重置成功</string>
    <string name="location_permission_show_text">定位权限被拒绝,无法准确获取您的地理位置</string>
    <string name="permission_dialog_key">PERMISSION_DIALOG_KEY</string>
    <string name="permission_dialog_title">提示</string>
    <string name="permission_dialog_positive">去设置</string>
    <string name="permission_dialog_negative">取消</string>
    <string name="permission_storage_message">本软件需要相关权限才可正常使用,是否去设置</string>
    <string name="blackout_repair">停电报修</string>
    <string name="fault_info">故障信息</string>
    <string name="blackout_search">停电搜索</string>
    <string name="message_notify">消息通知</string>
    <string name="setting">设置</string>
    <string name="warning_address">预警地址</string>
    <string name="contact_us">联系我们</string>
    <string name="feedback">意见反馈</string>
    <string name="shared_sdk">一键分享</string>
    <string name="report_title">请输入标题</string>
    <string name="report_submit">提交</string>
    <string name="map_home">首页</string>
    <string name="report_content">请输入详细信息</string>
    <string name="report_user">请输入联系人姓名</string>
    <string name="report_phone">请输入联系电话</string>
    <string name="report_address">请输入详细地址</string>
    <string name="report_submit_loading">提交中&#8230;</string>
    <string name="report_title_cannot_be_null">请输入标题</string>
    <string name="report_content_cannot_be_null">请输入内容</string>
    <string name="report_user_cannot_be_null">请输入联系人</string>
    <string name="report_format_error">联系电话格式有误,请检查</string>
    <string name="report_address_cannot_be_null">请输入详细地址</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="msg_setting">消息设置</string>
    <string name="password_modify">密码修改</string>
    <string name="app_out_text">退出</string>
    <string name="app_update">检查更新</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="report_user_title">姓名"\n"</string>
    <string name="report_user_address">地址"\n"</string>
    <string name="report_user_content">内容"\n"</string>
    <string name="user_info_title">个人信息</string>
    <string name="user_info_out">退出当前账号</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="user_info_address">地址信息</string>
    <string name="user_info_message">账户信息</string>
    <string name="user_info_waring_address">预警地址</string>
    <string name="user_info_user">用户信息</string>
    <string name="safe_info_message">安全信息</string>
    <string name="user_info_phone">更换手机号</string>
    <string name="other_info_message">其他</string>
    <string name="system_info_message">管理</string>
    <string name="person_info">人员管理</string>
    <string name="report_info">停电报修</string>
    <string name="release_info">信息发布</string>
    <string name="is_out_current_user">是否退出当前账号?</string>
    <string name="user_info_old_password">请输入原密码</string>
    <string name="user_info_new_password">请输入新密码</string>
    <string name="update_password_submit">提交</string>
    <string name="update_password_success">修改成功</string>
    <string name="hint_new_phone">新手机号</string>
    <string name="user_info_code">验证码</string>
    <string name="user_login_account">登录号</string>
    <string name="user_binding_phone">手机号</string>
    <string name="user_binding_address">区域名</string>
    <string name="user_name_change_prompt">登录名由字母和数字组成,并且只能该改一次</string>
    <string name="update_user_name_error">用户名不合法</string>
    <string name="release_fragment_msg_title">标题</string>
    <string name="release_fragment_msg_content">请输入内容</string>
    <string name="release_msg_title_empty">请输入标题</string>
    <string name="detailed_address">请输入详细地址</string>
    <string name="select_area_id">请选择地区</string>
    <string name="pull_xml">company_xml.xml</string>
    <string name="release_msg_success">发布成功</string>
    <string name="address_submit_success">提交成功</string>
    <string name="address_submit">提交</string>
    <string name="address_area_prompt">请选择区域</string>
    <string name="system_address_prompt">设置此地址后,会覆盖设置中预警地址!!!</string>
    <string name="user_info_flag_key">USER_FLAG_KEY</string>
    <string name="setting_info_flag_key">SETTING_FLAG_KEY</string>
    <string name="address_save">保存</string>
    <string name="text_view_empty">无数据</string>
    <string name="push_result">result</string>
    <string name="push_type">type</string>
    <string name="push_title">title</string>
    <string name="push_content">content</string>
    <string name="push_area_id">area</string>
    <string name="push_type_login">1</string>
    <string name="push_result_key">OK</string>
    <string name="push_login_key">登录</string>
    <string name="push_login_content">该账号已在其他设备登录,如非本人登录,密码可能泄露,请更改密码!</string>
    <string name="push_report_type">2</string>
    <string name="push_report_title">报修</string>
    <string name="push_report_content">收到新停电报修信息,请查看!</string>
    <string name="warning_address_not_null">请设置预警位置,否则无法提交!</string>
    <string name="push_release_type">3</string>
    <string name="push_release_title">发布</string>
    <string name="push_release_content">收到新发布的故障信息,请查看</string>
    <string name="fault_date_get_in">请稍后&#8230;</string>
    <string name="not_edit_waring_address">用户已登录,请到个人信息中进行设置</string>
    <string name="fault_load_more_null">无更多数据</string>
    <string name="fault_data_loading">加载中&#8230;</string>
    <string name="fault_data_error">数据异常</string>
    <string name="detailed_read">已处理</string>
    <string name="detailed_fault_title">详细信息</string>
    <string name="detailed_fault_sign_read">是否将该条信息标记为已处理,并更改其状态?</string>
    <string name="call_phone">拨打电话</string>
    <string name="call_phone_rationale">请授予拨打电话权限,否则无法拨打电话,是否去设置?</string>
    <string name="contact_http_title">官网</string>
    <string name="contact_http">www.bj.sgcc.com.cn</string>
    <string name="contact_phone_title">电话</string>
    <string name="contact_phone">95598</string>
    <string name="contact_weiBo">微博</string>
    <string name="contact_weiXin">微信</string>
    <string name="website_http">http://www.95598.cn/person/index.shtml</string>
    <string name="website_http_1">官网：www.bj.sgcc.com.cn</string>
    <string name="sina_http">http://weibo.com/sgcc</string>
    <string name="sina_http_1">微博：weibo.com/sgcc</string>
    <string name="action_view">android.intent.action.VIEW</string>
    <string name="call_phone_number">tel:95598</string>
    <string name="feedback_thank">感谢使用本客户端</string>
    <string name="feedback_fragment_input_feedback">请输入您的建议</string>
    <string name="input_cannot_be_null">请输入建议内容!</string>
    <string name="long_click_change_permission">长按更改其权限</string>
    <string name="person_permission_changes">权限变更</string>
    <string name="person_permission_message">权限变更后无法恢复,请谨慎操作</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="key_start_time">key_start_time</string>
    <string name="key_end_time">key_end_time</string>
    <string name="key_org_code">key_org_code</string>
    <string name="key_type">key_type</string>
    <string name="key_scope">key_scope</string>
    <string name="setting_area_title">请选择地区,一遍获取该地区停电信息,\n如未设置则默认为"城区"。</string>
    <string name="setting_area_toolbar_title">区域设置</string>
    <string name="http_not_data">该地区无停电信息</string>
    <string name="range_dialog_fragment_dialot_title">请输入范围(单位/KM)</string>
    <string name="range_dialog_error_prompt">请输入1KM以上范围</string>
    <string name="no_data_range">无符合范围的数据</string>
    <string name="location_error">定位异常</string>
    <string name="click_input_range">请点击此处</string>
    <string name="search_loading">搜索中&#8230;</string>
</resources>