<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--主菜单-->
    <group android:checkableBehavior="single">

        <!--地图-->
        <item
            android:id="@+id/map_home"
            android:checked="true"
            android:icon="@drawable/icon_address_72px"
            android:title="@string/map_home"/>

        <!--停电报修-->
        <item
            android:id="@+id/blackout_repair"
            android:icon="@drawable/icon_submit_72px"
            android:title="@string/blackout_repair"/>
        <!--故障信息-->
        <item
            android:id="@+id/fault_info"
            android:icon="@drawable/icon_fault_72px"
            android:title="@string/fault_info"/>
        <!--停电搜索-->
        <item
            android:id="@+id/info_search"
            android:icon="@drawable/icon_search_72px"
            android:title="@string/blackout_search"/>

        <!--消息通知-->
        <item
            android:id="@+id/message_notify"
            android:icon="@drawable/icon_notify_72px"
            android:title="@string/message_notify"/>
        <!--消息设置-->

        <!--预警地址-->
        <!--<item-->
        <!--android:id="@+id/warning_address"-->
        <!--android:icon="@drawable/icon_address_72px"-->
        <!--android:title="@string/warning_address"/>-->

        <!--联系我们-->
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/icon_contacts_72px"
            android:title="@string/contact_us"/>

        <!--意见反馈-->
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/icon_feedback_72px"
            android:title="@string/feedback"/>

        <!--设置-->
        <item
            android:id="@+id/setting"
            android:icon="@drawable/icon_setting_72px"
            android:title="@string/setting"/>
    </group>

</menu>
