<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_bar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--title-->
            <com.huadin.widget.ClearEditText
                android:id="@+id/report_title"
                style="@style/report_info_style"
                android:hint="@string/report_title"/>
            <!--content-->
            <com.huadin.widget.ClearEditText
                android:id="@+id/report_content"
                style="@style/report_info_style"
                android:hint="@string/report_content"
                android:minHeight="80dp"/>

            <!--user-->
            <com.huadin.widget.ClearEditText
                android:id="@+id/report_user"
                style="@style/report_info_style"
                android:hint="@string/report_user"/>

            <!--phone-->
            <com.huadin.widget.ClearEditText
                android:id="@+id/report_phone"
                style="@style/report_info_style"
                android:hint="@string/report_phone"/>

            <!--address-->
            <com.huadin.widget.ClearEditText
                android:id="@+id/report_address"
                style="@style/report_info_style"
                android:hint="@string/report_address"/>

            <Button
                android:id="@+id/report_submit"
                style="@style/report_info_style"
                android:layout_marginTop="@dimen/report_button_margit_top_30dp"
                android:background="@drawable/report_submit_button_shape"
                android:text="@string/report_submit"
                android:textColor="@color/report_button_color"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>