<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.huadin.widget.ClearEditText
        android:id="@+id/old_password"
        style="@style/update_password_input_edit"
        android:hint="@string/user_info_old_password"/>


    <com.huadin.widget.ClearEditText
        android:id="@+id/new_password"
        style="@style/update_password_input_edit"
        android:hint="@string/user_info_new_password"/>


    <Button
        android:id="@+id/password_submit"
        style="@style/login_register_submit_button"
        android:layout_margin="@dimen/user_info_item_margin"
        android:text="@string/update_password_submit"/>

</LinearLayout>